RESOLVED FIXED180224
[Cocoa] Fix CVPixelBuffer leak
https://bugs.webkit.org/show_bug.cgi?id=180224
Summary [Cocoa] Fix CVPixelBuffer leak
Joseph Pecoraro
Reported 2017-11-30 16:10:53 PST
Fix CVPixelBuffer leak CVPixelBufferCreate returns a +1 instance in its out value. RealtimeIncomingVideoSourceCocoa doesn't appear to manage it correctly.
Attachments
[PATCH] Proposed Fix (2.39 KB, patch)
2017-11-30 16:14 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2017-11-30 16:14:43 PST
Created attachment 328049 [details] [PATCH] Proposed Fix
youenn fablet
Comment 2 2017-11-30 16:17:24 PST
Comment on attachment 328049 [details] [PATCH] Proposed Fix Thanks!
WebKit Commit Bot
Comment 3 2017-11-30 16:57:16 PST
Comment on attachment 328049 [details] [PATCH] Proposed Fix Clearing flags on attachment: 328049 Committed r225374: <https://trac.webkit.org/changeset/225374>
WebKit Commit Bot
Comment 4 2017-11-30 16:57:18 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-11-30 16:58:46 PST
Note You need to log in before you can comment on or make changes to this bug.