[Cocoa] Fix CVPixelBuffer leak https://bugs.webkit.org/show_bug.cgi?id=180224

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-11-30
Reviewed by Youenn Fablet.

* platform/mediastream/mac/RealtimeIncomingVideoSourceCocoa.cpp:
(WebCore::RealtimeIncomingVideoSourceCocoa::pixelBufferFromVideoFrame):
Adopt the newly created pixel buffer.

(WebCore::RealtimeIncomingVideoSourceCocoa::OnFrame):
Release the format description as soon as we are done with it. Otherwise
we could have bailed before releasing it.

Canonical link: https://commits.webkit.org/196224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225374 268f45cc-cd09-0410-ab3c-d52691b4dbfc