Source/WebCore/platform/mediastream/mac/RealtimeIncomingVideoSourceCocoa.cpp
@@ -65,7 +65,7 @@ CVPixelBufferRef RealtimeIncomingVideoSourceCocoa::pixelBufferFromVideoFrame(con
             auto status = CVPixelBufferCreate(kCFAllocatorDefault, frame.width(), frame.height(), kCVPixelFormatType_420YpCbCr8Planar, nullptr, &pixelBuffer);
             ASSERT_UNUSED(status, status == noErr);
 
-            m_blackFrame = pixelBuffer;
+            m_blackFrame = adoptCF(pixelBuffer);
             m_blackFrameWidth = frame.width();
             m_blackFrameHeight = frame.height();
 
@@ -114,11 +114,11 @@ void RealtimeIncomingVideoSourceCocoa::OnFrame(const webrtc::VideoFrame& frame)
 
     CMSampleBufferRef sampleBuffer;
     ostatus = CMSampleBufferCreateReadyWithImageBuffer(kCFAllocatorDefault, (CVImageBufferRef)pixelBuffer, formatDescription, &timingInfo, &sampleBuffer);
+    CFRelease(formatDescription);
     if (ostatus != noErr) {
         LOG_ERROR("Failed to create the sample buffer: %d", static_cast<int>(ostatus));
         return;
     }
-    CFRelease(formatDescription);
 
     auto sample = adoptCF(sampleBuffer);
 
